syntax = "proto3";

package dev.pagefault.eve.grpc;

import "common.proto";

option java_multiple_files = true;
option java_generic_services = true;

service TaskController {
	rpc StartTask (TaskRequest) returns (RequestStatus) {}
	rpc StopTask (TaskRequest) returns (RequestStatus) {}
	rpc EnableTask (TaskRequest) returns (RequestStatus) {}
	rpc DisableTask (TaskRequest) returns (RequestStatus) {}
	rpc StatusTask (TaskRequest) returns (RequestStatus) {}
}

message TaskRequest {
	string taskname = 1;
}
